deploy/manual/apply/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'pickly-backend-dev'
  namespace: 'default'
  labels:
    project: 'pickly'
    environment: 'dev'
    componenet: 'backend'
    application: 'pickly-backend-dev'
    version: '0.1'
spec:
  replicas: 3
  selector:
    matchLabels:
      application: 'pickly-backend-dev'
  template:
    metadata:
      labels:
        project: 'pickly'
        environment: 'dev'
        componenet: 'backend'
        application: 'pickly-backend-dev'
    spec:
      containers:
        - name: 'pickly-backend-dev'
          image: 'm3ntorshipci/pickly-backend:0.1'
          volumeMounts:
            - name: 'pickly-backend-dev-config-files'
              mountPath: /pickly-backend/secrets
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 3001
              protocol: TCP
      volumes:
        - name: 'pickly-backend-dev-config-files'
          configMap:
            name: 'pickly-backend-dev'
